package NatsStreamingListener;
message NatsMessage {
  optional string sender_service_name = 1;
  optional string receiver_action_name = 2;
  repeated string receiver_action_parameters = 3;
  optional int64 message_timestamp = 4;
  optional string transaction_id = 5;
}
